--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ a {
     text-decoration: none;
 }
 
-/* 2단계 - header style 지정 */
+/* 2단계 - header 태그의 style 지정 */
 header {
     width: 100%;
     border-bottom: 1px solid #ddd;
@@ -35,8 +35,198 @@ header div.inner h1 a {
     font: bold 24px/1 "arial";
     color: #444;
 }
-header div.inner ul.util {
+header div.inner ul#util {
     position: absolute;
     top: 20px;
-    right: 30px;
+    right: 0px;
+}
+header div.inner ul#util li {
+    float: left;
+}
+header div.inner ul#util li a {
+    display: block;
+    font: 12px/1 "arial";
+    color: #999;
+    padding: 0px 10px;
+}
+header div.inner ul#gnb {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+}
+header div.inner ul#gnb li {
+    float: left;
+}
+header div.inner ul#gnb li a {
+    display: block;
+    font: bold 15px/1 "arial";
+    color: #555;
+    padding: 20px 40px;
+    transition: all 0.5s;
+}
+header div.inner ul#gnb li a:hover {
+    background: #555;
+    color: #fff;
+}
+
+/* 3단계 - figure 태그의 Style 지정 */
+figure {
+    width: 1180px;
+    height: 600px;
+    margin: 0px auto;
+    position: relative;
+    background: #000;
+    position: relative;
+    overflow: hidden;
+    padding-top: 150px;
+}
+figure video {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+figure div.inner {
+    width: 800px;
+    margin: 0px auto;
+    position: relative;
+    text-align: center;
+}
+figure div.inner h1 {
+    font: normal 120px/1 "arial";
+    color: #fff;
+    margin-bottom: 20px;
+}
+figure div.inner p {
+    font: 16px/1.4 "arial";
+    color: #888;
+    margin-bottom: 60px;
+}
+figure div.inner a {
+    display: block;
+    width: 400px;
+    height: 30px;
+    border: 1px solid #bbb;
+    margin: 0px auto;
+    font: bold 11px/30px "arial";
+    color: #fff;
+    letter-spacing: 1px;
+    transition: all 0.5s;
+}
+figure div.inner a:hover {
+    background: #fff;
+    color: #555;
+}
+
+/* 4단계 - section 태그(뉴스 기사)의 Style 지정 */
+section {
+    width: 100%;
+    padding: 100px 0px;
+}
+section div.inner {
+    width: 1180px;
+    margin: 0px auto;
+}
+section div.inner h1 {
+    font: bold 24px/1 "arial";
+    color: #555;
+    text-align: center;
+    margin-bottom: 30px;
+}
+section div.inner div.wrap {
+    width: 100%;
+    margin: 0px auto;
+}
+section div.inner div.wrap::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+section div.inner div.wrap article {
+    width: 280px;
+    float: left;
+    margin-right: 20px;
+}
+section div.inner div.wrap article:last-child {
+    margin-right: 0px;
+}
+section div.inner div.wrap article h2 {
+    margin-bottom: 10px;
+}
+section div.inner div.wrap article h2 a {
+    font: bold 16px/1 "arial";
+    color: #555;
+}
+section div.inner div.wrap article p {
+    font: 14px/1.4 "arial";
+    color: #777;
+}
+section div.inner div.wrap article div.pic {
+    width: 100%;
+    height: 120px;
+    background: #333;
+    margin-bottom: 15px;
+    position: relative;
+    overflow: hidden;
+}
+section div.inner div.wrap article div.pic img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+/* 5단계 - footer 태그의 Style 지정 */
+footer {
+    width: 100%;
+    background: #333;
+    padding: 50px 0px;
+    border-top: 1px solid #888;
+}
+footer div.inner {
+    width: 1180px;
+    margin: 0px auto;
+}
+footer div.inner div.upper {
+    width: 100%;
+    border-bottom: 1px solid #777;
+    padding-bottom: 20px;
+}
+footer div.inner div.upper::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+footer div.inner div.upper h1 {
+    float: left;
+    font: bold 24px/1 "arial";
+    color: #666;
+}
+footer div.inner div.upper ul {
+    float: right;
+}
+footer div.inner div.upper ul li {
+    float: left;
+    margin-left: 20px;
+}
+footer div.inner div.upper ul li a {
+    font: bold 14px/1 "arial";
+    color: #666;
+}
+footer div.inner div.lower {
+    width: 100%;
+    padding-top: 20px;
+}
+footer div.inner div.lower address {
+    width: 100%;
+    font: 12px/1.3 "arial";
+    color: #777;
+    margin-bottom: 20px;
+}
+footer div.inner div.lower p {
+    width: 100%;
+    font: 12px/1 "arial";
+    color: #777;
 }
